--- a/android/app/src/main/res/layout/list_tile_native_ad.xml
+++ b/android/app/src/main/res/layout/list_tile_native_ad.xml
@@ -5,18 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_list_tile_native_ad_attribution_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#F19938"
-            android:text="Ad"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="372dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_list_tile_native_ad_icon"
@@ -27,6 +23,44 @@
             android:layout_marginLeft="16dp"
             android:scaleType="fitXY"
             tools:background="#EDEDED" />
+
+        <com.google.android.gms.ads.nativead.MediaView
+            android:id="@+id/ad_media"
+            android:layout_width="355dp"
+            android:layout_height="200dp"/>
+
+        <TextView
+            android:id="@+id/tv_list_tile_native_ad_headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:maxLines="1"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            tools:text="Headline" />
+
+        <TextView
+            android:id="@+id/tv_list_tile_native_ad_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:maxLines="1"
+            android:textColor="#828282"
+            android:textSize="14sp"
+            tools:text="body" />
+
+
+        <TextView
+            android:id="@+id/tv_list_tile_native_ad_attribution_small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#F19938"
+            android:text="Ad"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
+
 
         <TextView
             android:id="@+id/tv_list_tile_native_ad_attribution_large"
@@ -41,40 +75,7 @@
             android:textColor="#FFFFFF"
             android:visibility="invisible" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="80dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:orientation="vertical">
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_list_tile_native_ad_headline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:maxLines="1"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                tools:text="Headline" />
-
-            <TextView
-                android:id="@+id/tv_list_tile_native_ad_body"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:maxLines="1"
-                android:textColor="#828282"
-                android:textSize="14sp"
-                tools:text="body" />
-
-        </LinearLayout>
-
-    </FrameLayout>
 
 </com.google.android.gms.ads.nativead.NativeAdView>
