--- a/android/app/src/main/res/layout/list_tile_native_ad.xml
+++ b/android/app/src/main/res/layout/list_tile_native_ad.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.gms.ads.nativead.NativeAdView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="372dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="#FFFFFF"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:orientation="vertical">
 
         <ImageView
@@ -24,10 +29,7 @@
             android:scaleType="fitXY"
             tools:background="#EDEDED" />
 
-        <com.google.android.gms.ads.nativead.MediaView
-            android:id="@+id/ad_media"
-            android:layout_width="355dp"
-            android:layout_height="200dp"/>
+
 
         <TextView
             android:id="@+id/tv_list_tile_native_ad_headline"
@@ -58,7 +60,7 @@
             android:layout_height="wrap_content"
             android:background="#F19938"
             android:text="Ad"
-            android:textColor="#FFFFFF"
+            android:textColor="#4527A0"
             android:textSize="12sp" />
 
 
@@ -75,6 +77,27 @@
             android:textColor="#FFFFFF"
             android:visibility="invisible" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.gms.ads.nativead.MediaView
+            android:id="@+id/ad_media"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintDimensionRatio="W,16:9"
+            android:layout_height="0dp"
+            android:layout_width="0dp" >
+        </com.google.android.gms.ads.nativead.MediaView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
     </LinearLayout>
 
 
